# Stripe-Playground

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AUTO_REFRESH_IMPROVEMENTS.md  BROWSER_CERT_INSTALL.md  BROWSER_TRUST_GUIDE.md  DEMO_MODE.md  Dockerfile  Dockerfile.cert-manager  Financial-Command-Center-Launcher.spec  ISSUES_RESOLVED.md  LAUNCHER_README.md  LICENSE  Launch-With-Trusted-Certs.cmd  MCP_INTEGRATION_SUCCESS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SESSION_FIX_SUMMARY.md  SETUP_WIZARD_README.md  SHORTCUT_FIX_SUMMARY.md  SSL_IMPROVEMENTS_SUMMARY.md  SSL_SETUP_GUIDE.md  WEB_UI_IMPLEMENTATION.md  WINDOWS_CERTIFICATE_GUIDE.md  app.py  app_with_setup_wizard.py  build_launcher.ps1  build_launcher.py  cert_manager.py  claude_integration.py  cleanup_temp_directories.cmd  compliance_mcp.py  conftest.py  debug_xero_contacts.py  diagnose_mcp_connection.py  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  financial_launcher.py  (+29 more)
auth/: security.py
certs/: ca.crt  server.crt
docker/: entrypoint.sh
installer/: financial_launcher.iss
installer_package/: INSTALL.md  LAUNCH.bat  Launch-Financial-Command-Center.cmd  QUICK_START.txt  README.md  app.py  demo_mode.py  (+6 more)
mcp-stripe-demo/: .env  .gitignore  app.py  compliance_config.json  compliance_mcp.py  config.py  mini.py  plaid_mcp.py  plaid_store.json  pyproject.toml  requirements.txt  stripe_mcp.py  utils.py  webhook_server.py  xero_api_calls.py  xero_client.py  xero_mcp.py  xero_token_exchange.py
mcp-stripe-demo/audit/: audit_log.jsonl
mcp-stripe-demo/auth/: encryption.key
(+22 files in other folders)
